src/app.scss
$mainOrange: #E75D2A;
$font-heading: 'Ubuntu', sans-serif;
$font-body: 'Franklin Gothic';
$listColour: #0077CA;
$mainColour: #003C71;

@mixin padder($padleft, $padright, $padbot, $padtop) {
  padding-bottom: $padbot;
  padding-top: $padtop;
  padding-left: $padleft;
  padding-right: $padright;
}

@mixin marginer($marginR, $marginL, $marginT, $marginB) {
  margin-right: $marginR;
  margin-left: $marginL;
  margin-top: $marginT;
  margin-bottom: $marginB;
}

@mixin chat-bubble($colour) {
  
}

body {
  margin: 0;
  padding: 0;
  font-family: $font-body;
  font-weight: normal;
}

div {
  word-wrap: break-word;
  line-height: 1.25rem;
}

.responsive-column {
  flex: 1;
  overflow: auto;
}

#chat-column-holder {
  text-align: center;

  .chat-column {
    display: none;
    flex-direction: column;
    
    height: 90%;
    padding: 0.05rem 0 0.625rem 0;
    margin: auto;
    text-align: left;
    max-width: 25rem;
    min-width: 9.375rem;
  
    border-radius: 1.5rem;
    
    transform: scale(0.8);
    background: #fff;
  
    position: fixed;
    bottom: 1rem;
    right: 2rem;

    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.208), 0 6px 6px rgba(0,0,0,0.23);

    #scrollingChat {
      margin: 0.75rem;
      overflow-y: auto;
      overflow-x: hidden;
      flex: 1;
      font-size: 1.125rem;
    }
  }
}

.from-watson{
  padding-bottom: 1rem;
  .message-inner {
    position: relative;
    font-size: 1rem;
    color: #fff;
    letter-spacing: 0.015rem;
    line-height: 1.3125rem;
    background: $mainColour;
    border-radius: 1.25rem;
    border-bottom-left-radius: 0;
    text-align: left;
    display: inline-block;
    margin-right: 2.5rem;
    min-width: 2.5rem;

    p {
      margin: 0.3125rem;
      padding: 0 0.9375rem;
    }

    a{
      color: #0077CA;
    }
  }

  .message-inner:before{
    content: "";
    position: absolute;

    z-index: -2;
    bottom: -0.375rem;
    left: 0;
    height: 0.375rem;
    width: 0.5rem;
    background: $mainColour;
  }

  .message-inner:after {
    content: "";
    position: absolute;
    z-index: -1;
    bottom: -0.5rem;
    left: 0;
    height: 0.5rem;
    width: 0.5rem;
    background: #fff;
    border-top-left-radius: 1.25rem;
  }
}



.load .message-inner {
  opacity: 1;
  margin-top: 0.3125rem;
}

.from-user {
  text-align: right;
  padding-bottom: 1rem;
  .message-inner {
    position: relative;
    font-size: 1rem;
    color: #fff;
    letter-spacing: 0.015rem;
    line-height: 1.3125rem;
    background: $mainOrange;
    border-radius: 1.25rem;
    border-bottom-right-radius: 0;
    text-align: left;
    display: inline-block;
    margin-left: 2.5rem;
    min-width: 2.5rem;

    p {
      margin: 0.3125rem;
      padding: 0 0.9375rem;
    }
  }

  .message-inner:before{
    content: "";
    position: absolute;

    z-index: -2;
    bottom: -0.375rem;
    right: 0;
    height: 0.375rem;
    width: 0.5rem;
    background: $mainOrange;
  }

  .message-inner:after {
    content: "";
    position: absolute;
    z-index: -1;
    bottom: -0.5rem;
    right: 0;
    height: 0.5rem;
    width: 0.5rem;
    background: #fff;
    border-top-right-radius: 1.25rem;
  }
}

#textInput {
  font-size: 1rem;
  background: #fff;
  border-radius: 100rem;
  letter-spacing: 0.015rem;
  line-height: 1.3125rem;
  height: 2.5rem;
  max-width: 75%;
  @include padder(1rem,0.125rem ,0 ,0);
  margin: 0.375rem;
  width: 100rem;
  border: none;
  border: solid 1px #B9BBBE;
}

#chat-button{
  position: fixed;
  bottom: 2.5%;
  width: 4rem;
  height: 2.5rem;
  @include padder(0.125rem,0.125rem ,0 ,0);
  border-radius: 100rem;
  border: none;
  border: solid 1px #B9BBBE;
}

.options-list {
  color: $listColour;
  cursor: pointer;
}

.options-button {
  color: white;
  background-color: $listColour;
  border-radius: 6px;
  @include padder(6px, 6px, 4px, 4px);
  margin: 3px;
  cursor: pointer;
  display: inline-block;
}

#chatbox_bttn {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  background: whitesmoke;
  width: 70px;
  height: 70px;
  border-radius: 100em;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.208), 0 6px 6px rgba(0,0,0,0.23);
  
  border: none;
  border: solid 1px #B9BBBE;

  img {
    width: 60%;
  };
  
}

#chatbox_bttn:hover{
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.background{
  position: fixed;
  z-index: -2;
  min-width: 100%;
}


.chat-column-header{
  display: flexbox;
  position: relative;
  background: $mainColour;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  color: white;
  font-family: $font-heading;
  height: 9%;

  font-size: 1.25rem;

  .chat-header-message{
    align-content: center;
    text-align: center;
    @include marginer(1rem,1rem, 1rem ,1rem )

  }
  
  .header-logo{
    position: absolute;
    width: 3.25rem;
    @include marginer(1rem,1rem, 0 ,1rem )
  }
}

